feat(grpc): GetNearest method and bodiless impl; Status method deleted
